# prism

./: AGENTS.md  README.md
templates/: .gitignore  README.md  pyproject.toml
templates/configs/: ablation_core24.yaml  baseline.yaml  cross_series_4view.yaml
templates/notebooks/: checkpoint_probe.py  explore_runs.py  sanity_batch_labels.py  sanity_data_pipeline.py  sanity_loader.py  sanity_train_sampling.py
templates/scripts/: build_near_isotropic_manifest.py  cluster_snapshot.sh  convert_local_nlst_dicoms.py  job_ablate_core24.sh  job_build_near_iso_manifest.sh  job_build_near_iso_manifest_array.sh  job_marimo_sanity_batch.sh  job_marimo_sanity_data.sh  job_merge_near_iso_manifest_shards.sh  job_train_prism_ssl.sh  merge_near_isotropic_manifest_shards.py  profile_dataloader.py  setup_betty_uv.sh  submit_train_prism_ssl.sh  summarize_manifest.py  train_prism_ssl.py
templates/scripts/validation/: build_ct_validation_cache.py  build_ct_view_validation_cache.py
templates/src/prism_ssl/: __init__.py
templates/src/prism_ssl/config/: __init__.py  defaults.py  schema.py
templates/src/prism_ssl/data/: __init__.py  catalog.py  collate.py  filters.py  preflight.py  sample_contract.py  sharded_dataset.py
templates/tests/: README.md  test_checkpoint.py  test_checkpoint_probe.py  test_filters.py  test_hashing.py  test_loss_bundle.py  test_loss_schedule.py  test_metrics.py  test_model_backbone.py  test_preflight_methods.py  test_sample_contract.py  test_sharded_dataset.py  test_supcon.py  test_train_smoke.py  test_validation_cache.py  test_view_cache.py
(+30 files in other folders)
