[project]
name = "prism-ssl"
version = "0.1.0"
description = "Prism SSL training pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.5",
  "numpy>=2.0",
  "polars>=1.0",
  "nibabel>=5.0",
  "wandb>=0.18",
  "marimo>=0.11",
  "altair>=5.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
